--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,12 @@
 <header>
     <div class="container">
-<a href="#" routerlink = "/" class="logo"> Sports Shop</a>
+       
+<a  href='http://localhost:4200/home'  routerlink = "/home" class="logo">Sport Shop</a>
+
 <nav>
     <ul>
         <li>
-            <a routerLink="/"> Login</a>
+            <a routerLink="/login"> Login</a>
         </li>
         <li class="item-container">
             <a routerLink="/dashboard"> Paul</a>
