--- a/src/app/components/pages/checkout-page/checkout-page.component.html
+++ b/src/app/components/pages/checkout-page/checkout-page.component.html
@@ -1,5 +1,6 @@
 <!-- <app-title title="Cart Page" margin="1.5rem 0 0 2.5rem"></app-title> -->
-
+<app-header></app-header>
+<h2>Cart-Page</h2>
 <div class="container">
 <ul>
   <li *ngFor="let cartItem of cart.items">
