--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
             <a routerLink="/login"> Login</a>
         </li>
         <li class="item-container">
-            <a routerLink="/dashboard"> Paul</a>
+            <a routerLink="/dashboard">Admin</a>
             <div class="menu">
                 <a routerLink = "/profile">Profile</a>
                 <a routerLink = "/orders">Orders</a>
