--- a/src/app/components/pages/checkout-page/checkout-page.component.css
+++ b/src/app/components/pages/checkout-page/checkout-page.component.css
@@ -6,6 +6,13 @@
     margin-top: 0.5rem;
   }
   
+  h2{
+
+    display: flex;
+    justify-content : space-evenly
+    
+  }
+
   ul{
     display: flex;
     flex-direction: column;
