Add existing file

--- a/src/app/components/pages/login-page/login-page.component.html
+++ b/src/app/components/pages/login-page/login-page.component.html
@@ -1,6 +1,7 @@
 
 <div fxLayoutAlign = "center center" fxFlexFill>
     <mat-card fxFlex = "25">
+      <div style="color:red;" >{{warning}} </div>
      <mat-toolbar color="primary">login page</mat-toolbar> 
     <form fxLayoutAlign = "stretch" fxLayout = "column">
         <mat-form-field>
